# ascend

transformer_block/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main2.cpp  set_env.sh
transformer_block/aclnn/: aclnn_gelu_operation.cpp  aclnn_gelu_operation.h  aclnn_operation_base.cpp  aclnn_operation_base.h
transformer_block/atb/: atb_graph_layer_norm.cpp  atb_graph_layer_norm.h  atb_graph_op.cpp  atb_graph_op.h
transformer_block/memory/: memory_env.h  memory_utils.cpp  memory_utils.h  memorypool.cpp  memorypool.h
transformer_block/model/: model.cpp  model.h  model2.cpp  model2.h
transformer_block/utils/: log.cpp  log.h  utils.cpp  utils.h
